0024536: GCC compiler warning on breakage of pointer aliasing rules in BRepFill_Evolved.cxx

Avoid storing result of call to TopoDS::Edge() as reference